# GeoExplore

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
install/apps/geo-convert/: CMakeLists.txt
install/apps/geo-info/: CMakeLists.txt
install/apps/geo-utility/: CMakeLists.txt
install/apps/terrain-explore/: CMakeLists.txt
install/gui/: CMakeLists.txt
install/lib/: CMakeLists.txt
install/test/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/geo-convert/: CMakeLists.txt  CoordinateConversion.cpp  CoordinateConversion.hpp  ImageConversion.cpp  Options.cpp  Options.hpp  Utilities.hpp  main.cpp
src/apps/geo-dem-utility/: CMakeLists.txt  GDU_Options.cpp  GDU_Options.hpp  GDU_Render.cpp  GDU_Render.hpp  GDU_Utilities.cpp  GDU_Utilities.hpp  geo-dem-utility.cpp
src/apps/geo-explore/: CMakeLists.txt  main.cpp
src/apps/geo-explore/core/: Global_Options.cpp  Global_Options.hpp
src/apps/geo-info/: CMakeLists.txt  main.cpp
src/apps/geo-render-utility/: CMakeLists.txt  geo-render-utility.cpp  geo-render-utility.xml
src/apps/geo-render-utility/core/: Configuration_Options.cpp  Configuration_Options.hpp  Data_Container.cpp  Data_Container.hpp
src/apps/geo-render-utility/gl_utils/: OpenGL_Utilities.cpp  OpenGL_Utilities.hpp
src/apps/geo-utility/: CMakeLists.txt  Globals.hpp  Options.cpp  Options.hpp  Utilities.cpp  Utilities.hpp  geo-utility.xml
src/apps/terrain-explore/: CMakeLists.txt  Options.hpp  TerrainViewer.cpp  TerrainViewer.hpp
src/apps/terrain-explore/glwrappers/: GLAttribute.hpp  GLCompleteProgram.hpp  GLShader.hpp
src/apps/terrain-explore/shaders/: fshader-basic.glsl  vshader.glsl
src/lib/: CMakeLists.txt  GeoExplore.hpp  config.hpp  core.hpp  dem.hpp  filesystem.hpp  image.hpp  io.hpp  utilities.hpp
src/lib/GeoExplore/: CMakeLists.txt  coordinate.hpp  log.hpp  math.hpp
src/lib/GeoExplore/config/: A_Command_Line_Parser.hpp
src/lib/GeoExplore/coordinate/: CoordinateBase.hpp  CoordinateGeographic.hpp  Geoid_Manager_Base.cpp  Geoid_Manager_Base.hpp
src/lib/GeoExplore/core/: A_Status.cpp  Enumerations.cpp  Enumerations.hpp  Exceptions.hpp  Status_Enumerations.cpp  Status_Enumerations.hpp
src/lib/GeoExplore/dem/: A_DEM_IO_Driver_Base.cpp  A_DEM_IO_Driver_Base.hpp  A_DEM_IO_Driver_Flat.hpp  A_DEM_IO_Driver_SRTM.cpp  A_DEM_IO_Driver_SRTM.hpp  An_Elevation_Tile.hpp  DEM_Manager.cpp  DEM_Manager.hpp
src/lib/GeoExplore/filesystem/: FilesystemPath.cpp  PathFormatType.hpp
src/lib/GeoExplore/image/: ChannelType.hpp  DiskResource.hpp  Image_Utilities.hpp  MemoryResource.hpp  MetadataContainer.cpp  MetadataItem.cpp  PixelRGB.hpp  transforms.hpp
src/lib/GeoExplore/io/: ImageDriverBase.hpp  Image_IO.hpp  NETPBM_Driver.hpp  OpenCV_Driver.hpp  opencv_utils.hpp
src/lib/GeoExplore/log/: Logger.hpp
src/lib/GeoExplore/math/: A_Polygon.hpp  A_Rectangle.hpp  eigen3_utils.hpp
src/lib/GeoExplore/utilities/: FilesystemUtilities.cpp  StringUtilities.cpp  StringUtilities.hpp  System_Utilities.cpp  System_Utilities.hpp
src/lib/config/: A_Command_Line_Parser.cpp  A_Command_Line_Parser.hpp
src/lib/coordinate/: CoordinateBase.cpp  CoordinateBase.hpp  CoordinateConversion.hpp  CoordinateGeographic.hpp  CoordinateMGRS.hpp  CoordinateUTM.hpp
src/lib/core/: A_Status.cpp  A_Status.hpp  Enumerations.cpp  Enumerations.hpp  Status_Enumerations.hpp
src/lib/dem/: A_DEM_IO_Driver_Base.hpp  A_DEM_IO_Driver_FLAT.cpp  A_DEM_IO_Driver_FLAT.hpp  A_DEM_IO_Driver_Flat.cpp  A_DEM_IO_Driver_Flat.hpp  A_DEM_IO_Driver_SRTM.cpp  A_DEM_IO_Driver_SRTM.hpp  An_Elevation_Tile.hpp  DEM.hpp  DEM_IO_Driver_Types.cpp  DEM_IO_Driver_Types.hpp  DEM_Manager.cpp  DEM_Manager.hpp  SRTM_Utilities.cpp  SRTM_Utilities.hpp
src/lib/filesystem/: FilesystemPath.cpp  FilesystemPath.hpp
src/lib/image/: BaseResource.hpp  ChannelType.cpp  ChannelType.hpp  DiskResource.hpp  Image.hpp  Interpolation.hpp  MemoryResource.hpp  MetadataContainer.cpp  MetadataContainer.hpp  MetadataItem.cpp  MetadataItem.hpp  PixelBase.hpp  PixelCast.hpp  PixelGray.hpp  PixelRGB.hpp  PixelRGBA.hpp  Pixel_Types.hpp  transforms.hpp
src/lib/image/transforms/: ImageTransformBase.hpp  ImageTransformColorMap.hpp  ImageTransformInvert.hpp
src/lib/io/: GDAL_Driver.cpp  GDAL_Driver.hpp  ImageDriverBase.hpp  ImageIO.cpp  ImageIO.hpp  Image_IO.cpp  Image_IO.hpp  NETPBM_Driver.hpp  OGR_Driver.cpp  OGR_Driver.hpp  OpenCV_Driver.hpp  gdal_utils.hpp
src/lib/io/gdal_utils/: GDAL_Utilities.cpp  GDAL_Utilities.hpp
src/lib/log/: Logger.cpp  Logger.hpp
src/lib/math/: A_Matrix.hpp  A_Matrix_Eigen.cpp  A_Matrix_Eigen.hpp  A_Point.hpp  A_Polygon.hpp  A_Rectangle.hpp  Common_Equations.hpp  Matrix_Conversions.hpp
src/lib/mosaic/: Mosaic.hpp
src/lib/utilities/: FilesystemUtilities.cpp  FilesystemUtilities.hpp  OpenCV_Utilities.cpp  OpenCV_Utilities.hpp  StringUtilities.hpp
src/test/: CMakeLists.txt  geo-explore-unit-tests.cpp
src/test/Unit_Testing_Only/: Coordinate_Test_Harness.cpp  Coordinate_Test_Harness.hpp
src/test/config/: TEST_A_Command_Line_Parser.cpp
src/test/coordinate/: TEST_CoordinateConversion.cpp  TEST_CoordinateGeographic.cpp  TEST_CoordinateUTM.cpp
src/test/core/: TEST_A_Status.cpp  TEST_Enumerations.cpp  TEST_Status_Enumerations.cpp
src/test/dem/: TEST_A_DEM_IO_Driver_Flat.cpp  TEST_A_DEM_IO_Driver_SRTM.cpp  TEST_An_Elevation_Tile.cpp  TEST_DEM_IO_Driver_Types.cpp  TEST_DEM_Manager.cpp  TEST_SRTM_Utilities.cpp
src/test/filesystem/: TEST_FilesystemPath.cpp  TEST_PathFormatType.cpp
src/test/image/: TEST_ChannelType.cpp  TEST_Image.cpp  TEST_Image_Utilities.cpp  TEST_Interpolation.cpp  TEST_MemoryResource.cpp  TEST_MetadataContainer.cpp  TEST_MetadataItem.cpp  TEST_PixelGray.cpp  TEST_PixelRGB.cpp  TEST_PixelRGBA.cpp
src/test/io/: TEST_GDAL_Driver.cpp  TEST_Image_IO.cpp  TEST_OGR_Driver.cpp  TEST_OpenCV_Driver.cpp
src/test/math/: TEST_A_Matrix_Eigen.cpp  TEST_A_Point.cpp  TEST_A_Polygon.cpp  TEST_A_Rectangle.cpp  TEST_Common_Equations.cpp  TEST_Matrix_Conversions.cpp
src/test/utilities/: TEST_FilesystemUtilities.cpp  TEST_StringUtilities.cpp  TEST_System_Utilities.cpp
(+174 files in other folders)
