#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    3/15/2015
#
#    Purpose:  Build the GeoExplore Applications
#



#  Create the geo-convert application
add_subdirectory(geo-convert)

#  Create the geo-explore application
#add_subdirectory(geo-explore)

#  Create the geo-info application
add_subdirectory(geo-info)

#  Create the geo-utility application
add_subdirectory(geo-utility)

#  Create the terrain explore application
#add_subdirectory(terrain-explore)

